fix font on mobile devices

--- a/src/App.css
+++ b/src/App.css
@@ -2,7 +2,7 @@
 
 @font-face {
   font-family: "Grifter";
-  src: url("fonts/Grifter/grifterbold.otf") format("otf");
+  src: url("./assets/fonts/Grifter/grifterbold.otf") format("opentype");
   font-weight: bold;
   font-style: normal;
   font-display: swap;
